--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,46 @@ version: 2.1
 
 jobs:
 
-  build:
-    docker:
-      - image: cimg/node:17.2.0 # the primary container, where your job's commands are run
-    steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+  build-frontend:
+      docker:
+        - image: circleci/node:13.8.0
+      steps:
+        - checkout
+        - restore_cache:
+            keys: [frontend-build]
+        - run:
+            name: Build front-end
+            command: |
+              # Your code here
+              exit 1
+        - save_cache:
+            paths: [frontend/node_modules]
+            key: frontend-build
+            cd frontend
+            npm install
+            npm run build
 
+    build-backend:
+      docker:
+        - image: circleci/node:13.8.0
+      steps:
+        - checkout
+        - restore_cache:
+            keys: [backend-build]
+        - run:
+            name: Back-end build
+            command: |
+              # Your code here
+              exit 1
+        - save_cache:
+            paths: [backend/node_modules]
+            key: backend-build
+            cd backend
+            npm install
+            npm run build
+
+workflows:
+  my workflow:
+    jobs:
+      - build-frontend
+      - build-backend
