--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,32 @@ jobs:
         - save_cache:
             paths: [backend/node_modules]
             key: backend-build
+
+  test-frontend:
+      docker:
+        - image: circleci/node:13.8.0
+      steps:
+        - checkout
+        - restore_cache:
+            keys: [frontend-build]
+        - run: 
+          command: |
+            cd frontend
+            npm install
+            npm run test
+                
+  test-backend:
+      docker:
+        - image: circleci/node:13.8.0
+      steps:
+        - Checkout
+        - restore_cache:
+            keys: [backend-build]
+        - run: 
+          command: |
+            cd backend
+            npm install
+            npm run test        
             
 
 workflows:
@@ -42,3 +68,8 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: build-frontend
+      - test-backend:
+          requires: build-backend
+          
