--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       docker:
         - image: circleci/node:13.8.0
       steps:
-        - Checkout
+        - checkout
         - restore_cache:
             keys: [backend-build]
         - run: 
