--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,8 @@ jobs:
               cd frontend
               npm install
               # npm install oauth-sign@^0.9.0
-              npm audit --audit-level=critical
+              npm audit fix --audit-level=critical --force
+              npm audit --audit-level=critical  
 
   scan-backend:
       docker:
@@ -92,8 +93,8 @@ jobs:
               cd backend
               npm install
               # npm install oauth-sign@^0.9.0
-              npm audit --audit-level=critical                                   
-            
+              npm audit fix --audit-level=critical --force
+              npm audit --audit-level=critical                                  
 
 workflows:
   my workflow:
