--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
               npm install
               # npm install oauth-sign@^0.9.0
               npm audit --audit-level=critical
-              npm audit fix --force                                  
+              npm audit fix                                  
 
 workflows:
   my workflow:
