--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,8 +151,33 @@ jobs:
               - project/.circleci/ansible/inventory.txt
 
         - destroy-environment:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}      
-
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+  
+  configure-infrastructure:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+                fingerprints: ["d8:b1:55:45:ac:df:7a:db:d0:c0:20:21:f1:84:ed:5c"] 
+        - attach_workspace:
+              at: ~/
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update ansible
+              apk add --update openssh
+              apk add --update tar
+              apk add --update gzip
+              pip3 install awscli
+        - run:
+            name: Configure server
+            command: |
+              cd .circleci/ansible
+              ansible-playbook -i inventory.txt configure-server.yml
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+    
 workflows:
   my workflow:
     jobs:
