--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,25 @@ commands:
             aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
 
+  revert_migration:
+      description: Revert the last migration if successfully run in the current workflow.
+      parameters:
+        workflow_id:
+          type: string
+      steps:
+        - run:
+            name: Revert migrations
+            when: on_fail
+            command: |
+              SUCCESS=$(curl --insecure  https://kvdb.io/9fDWx3pKEAVmqnKqgcShK6/migration_${CIRCLE_WORKFLOW_ID:0:7})
+              if (($SUCCESS == 1))
+              then
+                cd ~/project/backend
+                npm install
+                npm run build
+                npm run migrations:revert
+              fi
+
 jobs:
 
   build-frontend:
@@ -177,6 +196,28 @@ jobs:
               ansible-playbook -i inventory.txt configure-server.yml
         - destroy-environment:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+
+  run-migrations:
+      docker:
+        - image: circleci/node:13.8.0
+      steps:
+        - checkout
+        - run:
+            name: Run migrations
+            command: |
+              cd backend
+              npm install
+              npm run migrations > migrations_dump.txt
+              cat migrations_dump.txt
+        - run:
+            name: Send migration status to kvdb.io
+            command: |   
+                if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+                then
+                    curl https://kvdb.io/9fDWx3pKEAVmqnKqgcShK6/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                fi
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
     
 workflows:
   my workflow:
@@ -195,3 +236,6 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+          
