--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ commands:
           when: on_fail
           command: |
             echo "Destroying environment: << parameters.workflow_id >> "
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
             aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
 
@@ -83,6 +84,9 @@ jobs:
               cd frontend
               npm install
               npm run test
+        - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build      
                 
   test-backend:
       docker:
@@ -97,6 +101,9 @@ jobs:
               cd backend
               npm install
               npm run test
+        - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build        
 
   scan-frontend:
       docker:
@@ -110,9 +117,11 @@ jobs:
             command: |
               cd frontend
               npm install
-              # npm install oauth-sign@^0.9.0
               npm audit fix --audit-level=critical --force
-              npm audit --audit-level=critical  
+              npm audit --audit-level=critical
+        - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build         
 
   scan-backend:
       docker:
@@ -126,10 +135,12 @@ jobs:
             command: |
               cd backend
               npm install
-              # npm install oauth-sign@^0.9.0
               npm audit fix --force
               npm audit fix --force 
               npm audit --audit-level=critical
+        - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build       
                                                
   deploy-infrastructure:
       docker:
@@ -238,4 +249,5 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
+          
           
