--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,8 +228,48 @@ jobs:
                     curl --insecure https://kvdb.io/GNJAZUVgCp9p9BG2tyxbpL/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
                 fi
         - destroy-environment:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}          
-    
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
+
+  deploy-frontend:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - attach_workspace:
+              at: ~/
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update ansible
+              apk add --update nodejs
+              apk add --update npm
+              apk add --update tar
+              apk add --update gzip
+              pip3 install awscli
+        - run:
+            name: Get backend url
+            command: |
+              export BACKEND_IP=$(aws ec2 describe-instances \
+              --filter "Name=tag:project,Values=Udapeople" \
+              --query "Reservations[*].Instances[*].[PublicIpAddress]" \
+              --output text)
+              export API_URL="http://${BACKEND_IP}:3030"
+              echo "API_URL = ${API_URL}"
+              echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+              cat frontend/.env
+        - run:
+            name: Deploy frontend objects
+            command: |
+              cd frontend
+              npm install
+              npm run build
+              tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+              aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - revert_migration:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}         
+       
 workflows:
   my workflow:
     jobs:
@@ -249,5 +289,9 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+
+
 
           
