--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,7 +180,7 @@ jobs:
             paths:
               - project/.circleci/ansible/inventory.txt
 
-        #- destroy-environment:
+        - destroy-environment:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
   
   configure-infrastructure:
@@ -205,7 +205,7 @@ jobs:
             command: |
               cd .circleci/ansible
               ansible-playbook -i inventory.txt configure-server.yml
-        #- destroy-environment:
+        - destroy-environment:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
   run-migrations:
