--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,7 +268,64 @@ jobs:
         - destroy-environment:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         - revert_migration:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}         
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
+
+  deploy-backend:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+            fingerprints: ["d8:b1:55:45:ac:df:7a:db:d0:c0:20:21:f1:84:ed:5c"]
+        - attach_workspace:
+              at: ~/
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update ansible
+              ansible --version
+              apk add --update nodejs
+              apk add --update curl
+              apk add --update npm
+              apk add --update tar
+              apk add --update gzip
+              pip3 install awscli
+              aws --version
+        - run:
+            name: Create env file
+            command: |
+              cd backend
+              touch .env
+              echo "TYPEORM_CONNECTION=postgres" >> .env
+              echo "TYPEORM_MIGRATIONS_DIR=./src/migrations" >> .env
+              echo "TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts" >> .env
+              echo "TYPEORM_MIGRATIONS=./src/migrations/*.ts" >> .env
+              # Use these values for the local PG database from the Docker Compose file
+              echo "TYPEORM_HOST=${TYPEORM_HOST}"  >> .env
+              echo "TYPEORM_PORT=${TYPEORM_PORT}" >> .env
+              echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> .env
+              echo "TYPEORM_PASSWORD=${TYPEORM_PASSWORD}" >> .env
+              echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> .env
+              cat .env
+        - run:
+            name: Deploy backend
+            command: |
+              cd backend
+              npm i
+              npm run build
+              cd ..
+              # Zip the directory
+              tar -C backend -czvf artifact.tar.gz .
+              mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+              mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+              cd .circleci/ansible
+              echo "Contents  of the inventory.txt file is -------"
+              cat inventory.txt
+              ansible-playbook -i inventory.txt deploy-backend.yml
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - revert_migration:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}                 
        
 workflows:
   my workflow:
@@ -291,7 +348,6 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-
-
-
+      - deploy-backend:
+          requires: [run-migrations]
           
