--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,7 +344,7 @@ jobs:
         - attach_workspace:
             at: ~/      
         - run:
-            name: Backend smoke test.
+            name: Backend smoke test
             command: |
               export BACKEND_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
@@ -359,7 +359,7 @@ jobs:
                   return 1
               fi
         - run:
-            name: Frontend smoke test.
+            name: Frontend smoke test
             command: |
               URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
               echo ${URL} 
