--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -370,9 +370,9 @@ jobs:
               else
                 return 1
               fi
-        - destroy-environment:
+        #- destroy-environment:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-        - revert_migration:
+        #- revert_migration:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}                       
        
 workflows:
