--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -374,6 +374,44 @@ jobs:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         - revert_migration:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  cloudfront-update:
+      docker:
+        - image: python:3.10-alpine3.16
+      steps:
+        - checkout
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update nodejs
+              apk add --update curl
+              apk add --update npm
+              apk add --update tar
+              apk add --update gzip
+              pip3 install awscli
+        - run:
+            name: Update cloudfront distribution
+            command: |
+                  export OldWorkflowID=$(aws cloudformation \
+                  list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                  --no-paginate --output text)
+                  echo $OldWorkflowID >> ~/OldWorkflowID.txt
+                  cat ~/OldWorkflowID.txt      
+                  aws cloudformation deploy \
+                  --template-file .circleci/files/cloudfront.yml \
+                  --stack-name InitialStack \
+                  --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                  --tags project=Udapeople
+                  echo OldWorkflowID: "${OldWorkflowID}"
+                  echo Curent Workflow Id: "${CIRCLE_WORKFLOW_ID:0:7}"
+        - persist_to_workspace:
+            root: ~/
+            paths:
+              - OldWorkflowID.txt
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - revert_migration:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}            
                                      
 workflows:
   my workflow:
@@ -400,5 +438,6 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-frontend, deploy-backend]
-
-          
+      - cloudfront-update:
+          requires: [smoke-test]
+         
